--- a/package/package.json
+++ b/package/package.json
@@ -8,14 +8,7 @@
     "build": "vite build",
     "build:check": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate deploy",
-    "db:migrate:dev": "prisma migrate dev",
-    "db:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed.ts",
-    "db:reset": "prisma migrate reset",
-    "db:push": "prisma db push"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@svgr/rollup": "8.1.0",
@@ -54,7 +47,6 @@
   },
   "devDependencies": {
     "@iconify/react": "^5.1.0",
-    "@prisma/client": "^6.11.0",
     "@types/aos": "^3.0.7",
     "@types/chance": "^1.1.6",
     "@types/node": "20.10.5",
@@ -67,7 +59,6 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "^8.4.49",
-    "prisma": "^6.11.0",
     "tailwindcss": "^3.4.16",
     "tsx": "^4.20.3",
     "typescript": "^5.3.3",
